Fix Overlapping Content Boxs

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,8 +41,7 @@
 
 .content-wrapper {
     flex: 10;
-    display: flex;
-    flex-direction: column;
+    display: block;
     overflow-y: auto;
     margin-left: 3vw;
     justify-content: space-between;
@@ -53,7 +52,7 @@
     flex-grow: 0;
     min-width: 100%;
     min-height: 100vh;
-    margin-bottom: (20px + 25vw);
+    margin-bottom: calc(0);
 }
 
 #grad-main {
